--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,47 @@
+/* reset do css */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  background: #5B8A71;
+  background-image:linear-gradient(-90deg,#00a896, #05668D );
   background-size: auto 100vh; 
   font-family: Arial;
   height: 100vh;
+  font-size: 12px;
+}
+
+/*Se a tela tiver pelo menos 400 px ele irá aplicar as regras*/
+@media (min-width: 400px) {
+  body {
+  font-size: 14px;
+  }
+}
+
+@media (min-width: 600px) {
+  body {
+  font-size: 18px;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+  font-size: 24px;
+  }
+}
+
+header{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu {
   background-color:#e3ecfc;
+  position: fixed;
+  width: 100vw;
+  top: 0;
 }
 
 .menu ul {
@@ -15,12 +50,15 @@ body {
 }
 
 .menu li {
-  font-size: 200%;
   list-style: none;
 }
 
+.menu a {
+  display: block;
+  padding: 10px 20px;
+}
 a {
-  color:#457950;
+  color:#028090;
   text-decoration: none;
 }
 
@@ -36,4 +74,9 @@ a:hover {
 
 .site-subtitle {
  font-style: italic;
+}
+
+.image{
+  width: 200px;
+  height: auto;
 }
