Atualizado as orientações
criado também os artigos

--- a/pages/css/styles2.css
+++ b/pages/css/styles2.css
@@ -105,12 +105,12 @@ table {
 
 th, td {
     padding: 4px;
-    background-color: #b38f5f;
+    background-color: #02c39a;
     color: #e3ecfc;
 }
 
 th {
-    background-color:#6d5237;
+    background-color:#05668d;
     color: #e3ecfc;
 }
 
